chore: wiring up new buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <label>Start Time: </label><label for="startTime"></label><input type="number" id="startTime" min="0" value="0">
 <label>End Time: </label><label for="endTime"></label><input type="number" id="endTime" min="0" value="30">
 <button id="slowFilter">Slow Filter</button>
+<button id="speedUpFilter">Fast Filter</button>
+<button id="reverbFilter">Reverb Filter</button>
+<button id="reverseFilter">Reverse Filter</button>
+<button id="pitchUpFilter">Pitch Up Filter</button>
+<button id="pitchDownFilter">Pitch Down Filter</button>
 <script src="main.js"></script>
 </body>
 </html>
