feat: working demo completed

--- a/index.html
+++ b/index.html
@@ -1,20 +1,49 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head><title>Reverbed</title></head>
-<body>
-<h1>Reverbed</h1>
-<h4>By: <a href="https://github.com/sheikhrachel">Rachel</a></h4>
-<p>Upload an MP3 file to get started</p>
-<form id="uploadForm" enctype="multipart/form-data"><input type="file" id="mp3File" accept=".mp3"></form>
-<audio id="audio" controls></audio>
-<label>Start Time: </label><label for="startTime"></label><input type="number" id="startTime" min="0" value="0">
-<label>End Time: </label><label for="endTime"></label><input type="number" id="endTime" min="0" value="30">
-<button id="slowFilter">Slow Filter</button>
-<button id="speedUpFilter">Fast Filter</button>
-<button id="reverbFilter">Reverb Filter</button>
-<button id="reverseFilter">Reverse Filter</button>
-<button id="pitchUpFilter">Pitch Up Filter</button>
-<button id="pitchDownFilter">Pitch Down Filter</button>
-<script src="main.js"></script>
+<head>
+    <title>Reverb;d</title>
+    <link rel="stylesheet" href="site/css/output.css">
+</head>
+<body class="centered-body">
+<div class="max-w-screen-lg centered-div">
+    <!-- Header -->
+    <header>
+        <h1>Reverb;d</h1>
+        <h4>An audio filter sandbox by <a href="https://github.com/sheikhrachel">Rachel</a></h4>
+    </header>
+    <!-- Main Content -->
+    <main>
+        <!-- Upload Form -->
+        <form id="uploadForm" enctype="multipart/form-data">
+            <p>Upload a .mp3 file to get started</p>
+            <label class="label-text" for="file_input">Upload file</label>
+            <input class="file-input" aria-describedby="file_input_help" id="file_input" type="file" accept=".mp3">
+            <p class="help-text" id="file_input_help">mp3 files only (for now)</p>
+        </form>
+        <!-- Audio Controls -->
+        <div id="audio-controls" class="flex items-center p-4 bg-gray-900 text-white">
+            <!-- Custom Play/Pause Button -->
+            <button id="playPauseButton" class="audio-btn mr-4">
+                Play
+            </button>
+            <!-- Custom Audio Progress Bar -->
+            <div id="progressContainer" class="relative flex-1 mr-4 h-2 bg-gray-700 rounded">
+                <div id="progressBar" class="absolute h-2 bg-blue-500 rounded"></div>
+            </div>
+        </div>
+        <!-- Audio Visualizer -->
+        <div id="audio-visualizer">
+            <canvas id="visualizerCanvas"></canvas>
+        </div>
+        <!-- Filter Buttons -->
+        <div id="filter-buttons">
+            <p>Use these buttons to apply an audio filter</p>
+        </div>
+        <!-- loading spinner -->
+        <div id="loading-spinner" class="loading-spinner" style="display:none;"></div>
+    </main>
+</div>
+<!-- Scripts -->
+<script src="site/js/site.js"></script>
 </body>
 </html>
